# student-performance-indicator

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: cd-aws.yml  cd-cloudrun.yml  ci.yml  deploy-apprunner.yml  deploy-aws.yml  deploy.yml  retrain-aws.yml  retrain.yml  smoke.yml
artifacts/: ingestion_meta.json  model.pkl  model_report.json  preprocessor.pkl  test.parquet  train.parquet
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
docs/results/: model_report_example.json
notebooks/: EDA_student_performance.ipynb  model_training.ipynb
scripts/: train_and_publish.py
src/student_performance/: api.py  artifacts_gcs.py  artifacts_s3.py  cli.py  exception.py  logger.py  modeling.py  utils.py
src/student_performance/components/: config.py  data_ingestion.py  data_transformation.py  model_trainer.py
src/student_performance/mlops/: mlflow_logger.py
src/student_performance/pipeline/: predict_pipeline.py  train_pipeline.py
src/student_performance/registry/: gcs_registry.py  s3_registry.py
src/student_performance/scripts/: train_and_publish.py
src/student_performance/static/: app.js
src/student_performance/templates/: index.html
tests/: test_api_validation.py  test_smoke.py
