[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "student-performance"
version = "0.1.0"
description = "Student performance prediction with MLOps pipeline"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = ["numpy", "pandas", "scikit-learn"]

[project.optional-dependencies]
dev = ["pytest", "black", "ruff"]
